# CMC-tasks

./: .gitignore  1.pas
prac/11.11.24/: check_block (1.2).c  check_receive (1.3).c  check_reset (1.1).c  check_wait (1.4).c  die if ctrl c during 2 sec.c  how much sigstp.c  signals.md  zombies.c
sem 1/task 1/: digits.pas  fib.pas  find.pas  length.pas  max3.pas  nodesc.pas  numbers.pas  prime.pas  progress.pas  seqsum.pas  sign.pas  sumlength.pas  various.pas  zeroes.pas
sem 1/task 2/: compile.sh  count.pas  doubles.pas  exmin.pas  justrow.pas  letters.pas  magic.pas  mean.pas  minmax.pas  quarter.pas  reverse.pas  sum.pas  symetrie.pas
sem 1/task 3/: frequent.pas  less.pas  matrix.pas  maxmin.pas  norm.pas  recdigits.pas  recmax.pas  recsym.pas  scalar.pas  sum.pas  trace.pas  zeroes.pas
sem 1/task 4/: after.pas  concat.pas  doubles.pas  equal.pas  first.pas  groups.pas  merge_and.pas  merge_or.pas  merge_sub.pas  negative.pas  order.pas  split.pas  sum.pas
sem 2/task 1/: compile.sh  gather.py  sort.pas
sem 2/task 2/: perfects.c  twin_primes_almost_conjecture.c
sem 2/task 3/: bits01.s  bits02.s  bits03.s  chars01.s  chars02.s  chars03.s  chars04.s  chars05.s  chars06.s  digits01.s  digits02.s  digits03.s  numbers01.s  numbers02.s  numbers03.s  numbers04.s  numbers05.s
sem 2/task 4/: Makefile  (+3 more)
sem 3/task 11/: CMakeLists.txt  tests.txt
sem 3/task 11/include/: arena.h  ast.h  defer.h  lexer.h  parser.h  repl.h  shell.h  string_view.h  token.h
sem 3/task 11/src/: arena.c  ast.c  defer.c  lexer.c  parser.c  radsh.c  repl.c  shell.c  string_view.c  token.c
(+183 files in other folders)
